--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@ title: Home
         {{ site.description }}
     </p>
 
-    <a href="{{ site.baseurl }}/assets/cv-english.pdf" target="_blank">Download my One-Page Resume</a>
+    <a href="{{ site.baseurl }}/assets/cv-english.pdf" target="_blank">Télécharger mon CV imprimable</a>
 </div>
 
 <!-- Featured
 ================================================== -->
 <section class="featured-posts">
     <div class="section-title">
-        <h2><span>Why we should work together</span></h2>
+        <h2><span>Travaillons ensemble !</span></h2>
     </div>
     <div class="row">
 
@@ -43,7 +43,7 @@ title: Home
 
     <div class="section-title">
 
-        <h2><span>My Skills</span></h2>
+        <h2><span>Mes compétences</span></h2>
 
     </div>
 
@@ -57,7 +57,7 @@ title: Home
 
     <div class="section-title">
 
-        <h2><span>What I did until today</span></h2>
+        <h2><span>Ce que j'ai fait jusque là</span></h2>
 
     </div>
     <div class="row listrecent">
@@ -82,7 +82,7 @@ title: Home
 
     <div class="section-title">
 
-        <h2><span>How I learned and continue to learn</span></h2>
+        <h2><span>Comment j'ai appris et continue d'apprendre</span></h2>
 
     </div>
     <div class="row listrecent">
@@ -109,6 +109,6 @@ title: Home
 
     </div>
 
-    Reading, Linguistics, Kung-Fu, History and Art History, Dance, Boardgames
+    Lecture, Linguistique, Kung-Fu, Histoire et Histoire de l'art, Danse, Jeux de société
 
 </section>
