--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Home
         {{ site.description }}
     </p>
 
-    <a href="{{ site.baseurl }}/assets/cv-english.pdf" target="_blank">Télécharger mon CV imprimable</a>
+    <a href="{{ site.baseurl }}/assets/cv-erica-marco.pdf" target="_blank">Télécharger mon CV imprimable</a>
 </div>
 
 <!-- Featured
